contrib/kubernetes/kube/synapse-hash-by-ip-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-worker-hash-by-ip
spec:
  selector:
    app: synapse-worker
  ports:
  - name: generic-worker
    protocol: TCP
    port: 8083
    targetPort: 8083

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-hash-by-ip-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  rules:
  - host: matrix.example.com
    http:
      paths:
      # Inbound federation transaction request
      - path: /_matrix/federation/v1/send/
        pathType: Prefix
        backend:
          service:
            name: synapse-worker-hash-by-ip
            port:
              name: generic-worker
  tls:
  - hosts:
    - matrix.example.com
    secretName: matrix.example.com
